--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,10 +1,12 @@
 services:
   perlite:
-    image: sec77/perlite:dev
-    container_name: perlite-dev
+    image: sec77/perlite:latest
+    build: 
+      context: perlite
+    container_name: perlite
     restart: unless-stopped
     environment:
-      - NOTES_PATH=Demo
+      - NOTES_PATH=highres
       - HIDE_FOLDERS=docs,private,trash
       - HIDDEN_FILE_ACCESS=false
       - LINE_BREAKS=true
@@ -17,25 +19,26 @@ services:
       - FONT_SIZE=15
       - HTML_SAFE_MODE=true
       - TEMP_PATH=/tmp
-      - SITE_TITLE=Demo
+      - SITE_TITLE=Highres Wiki
       - SITE_TYPE=article
       - SITE_URL=
       - SITE_IMAGE=
       - SITE_DESC=
       - SITE_NAME=Perlite
-      - SITE_TWITTER=https://x.com/
+      - SITE_TWITTER=
       - SITE_LOGO=perlite.svg
       - SITE_HOMEPAGE=https://perlite.secure77.de/
-      - SITE_GITHUB=https://github.com/
+      - SITE_GITHUB=https://github.com/SelfScriptKiddies/Perlite
+      - GITHUB_STORAGE=https://github.com/SelfScriptKiddies/wiki-storage
     volumes:
-      - ./perlite/Demo:/var/www/perlite/Demo:ro
+      - ./storage:/var/www/perlite/highres:ro
 
   web:
     image: nginx:stable
     container_name: perlite_web
     restart: unless-stopped
     ports:
-      - 80:80
+      - 3010:80
     volumes:
       - ./web/config/perlite.conf:/etc/nginx/conf.d/default.conf:ro
     volumes_from: 
